--- a/src/index.css
+++ b/src/index.css
@@ -1259,3 +1259,37 @@ a{
   font-size: 21px;
   cursor: pointer
 }
+.Make-Alert-main-div{
+  position: fixed;
+  top: 108px;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  background: rgba(0, 0, 0, 0.459);
+}
+.Make-Alert{
+  background-color: rgb(238, 235, 235);
+  color: black;
+  margin-top: 35%;
+  width: 65%;
+  margin-left: 17%;
+  display: flex;
+  flex-direction: column;
+  border: 2px rgba(43, 42, 42, 0.616) solid;
+  border-radius: 20px;
+  padding: 15px;
+  font-size: 22px;
+}
+.TA-make-alert{
+  min-height: 150px;
+  max-height: 400px;
+  border: 4px groove black;
+  border-radius: 10px;
+  padding: 10px;
+  font-size: 18px;
+  width: 100%;
+  outline: none;
+  overflow: hidden; 
+  box-sizing: border-box;
+  resize: none; 
+}
