--- a/src/index.css
+++ b/src/index.css
@@ -405,28 +405,26 @@ a{
   flex-direction: row;
   align-items: center;
   padding-bottom: 40px;
-  gap: 60px;
+  gap: 30px;
 }
 .Traveler-Pic{
-  width: 40%;
-  max-width: 650px;
-  height: auto;
+  width: 400px;
+  max-width: 400px;
+  height: 210px;
+  max-height: 250px;
   border: black solid 2px;
-  margin-left: 2%;
-  padding-top: 15%;
-  padding-bottom: 15%;
-  border-radius: 50%;
-  display: flex;
-  justify-content: center;
+  padding-top: 45px;
+  padding-bottom: 45px;
+  border-radius: 50px;
 }
 .Traveler-Bio{
   border: rgba(0, 0, 0, 0.384) groove 4px;
-  width: 900px; 
+  width: 100%; 
   font-size: 28px;
   overflow: auto; 
   white-space: pre-line; 
   height: auto; 
-  padding: 5px;
+  padding: 0px;
 }
 .PB-dailyObj{
   margin-top: 0px;
@@ -599,7 +597,8 @@ a{
   display: flex;
   border: black solid 4px;
   flex-direction: column;
-  width: 100%;
+  width: 99%;
+  margin-left: 0%;
 }
 
 .Trav-negatives{
@@ -849,6 +848,22 @@ a{
   right: 2px;
   padding: 0px 3px ;
   border-radius: 50%;
+}
+.party-setting-div{
+  display: flex;
+  font-size: 26px;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  gap: 10px;
+}
+.LeaveParty{
+  position: absolute;
+  bottom: 10px;
+  right: 50px;
+  font-size: 28px;
+  font-weight: 600;
+  color: red;
 }
 
 .input-div {
