--- a/src/index.css
+++ b/src/index.css
@@ -1526,4 +1526,17 @@ a{
     margin-left: 0%;
     display: block;
   }
+  .Traveler-Bio{
+    width: 160px;
+  }
+  .Color-Div{
+    gap: 10px;
+  }
+  .Make-A-convo-grid{
+    display: grid;
+    grid-template-columns: repeat(1,1fr);
+    gap: 7px;
+    width: 98%;
+    margin-bottom: 50px;
+  }
 }
