--- a/src/index.css
+++ b/src/index.css
@@ -766,20 +766,21 @@ a{
 .convo-window-main-div{
   position: fixed;
   right: 5%;
-  top: 150px;
+  top: 120px;
   left: 5%;
   bottom: 5%;
   background-color: #1a1b1b0a;
   padding: 20px;
   border: black solid 5px;
   border-radius: 5%;
+  margin-bottom: 40px;
 }
 .start-new-convo-textarea{
   margin-left:  0px;
   font-size: 30px;
   resize: none;
   width: 100%;
-  height: 45vh;
+  height: 100%;
   border: 3px solid black;
   border-radius: 20px;
   color: white;
@@ -1091,7 +1092,7 @@ a{
   left: 10%;
   right: 10%;
   bottom: 10%;
-  background-color: rgba(255, 255, 255, 0.651);
+  z-index: 100;
   border-radius: 5%;
   font-size: 30px;
   word-wrap: break-word;
@@ -1104,6 +1105,7 @@ a{
   left: 10%;
   right: 10%;
   bottom: 10%;
+  z-index: 100;
   background-color: rgba(68, 65, 65, 0.877);
   color: white;
   border-radius: 5%;
@@ -1111,6 +1113,13 @@ a{
   word-wrap: break-word;
   padding: 20px;
   font-weight: 500;
+}
+.guild-reload-icon{
+  position: fixed;
+  left: 21%;
+  top: 188px;
+  width: 30px;
+  z-index: 10;
 }
 .guild-req-counter{
   background-color: red;
@@ -1141,6 +1150,7 @@ a{
   left: 20%;
   right: 0%;
   bottom: 0%;
+  z-index: 100;
   background-color: rgb(90, 89, 89);
   color: rgb(255, 255, 255);
   font-size: 30px;
@@ -1153,10 +1163,12 @@ a{
   flex-direction: column;
   align-items: center;
   gap: 30px;
+  z-index: 100;
   cursor: pointer;
 }
 .guild-settings-popup-item {
   width: 100%;
+  z-index: 1000;
   text-align: center;
   padding-top: 10px;
   padding-bottom: 10px;
@@ -1169,6 +1181,7 @@ a{
   left: 20%;
   right: 0%;
   bottom: 0%;
+  z-index: 100;
   background-color: rgb(90, 89, 89);
   color: rgb(255, 255, 255);
   font-size: 30px;
@@ -1182,6 +1195,7 @@ a{
   display: flex; 
   flex-direction: column;
   align-items: center;
+  z-index: 100;
 }
 .guild-features-popup-main{
   position: absolute;
@@ -1189,6 +1203,7 @@ a{
   left: 20%;
   right: 0%;
   bottom: 0%;
+  z-index: 1000;
   background-color: rgb(90, 89, 89);
   color: rgb(255, 255, 255);
   font-size: 30px;
@@ -1215,6 +1230,7 @@ a{
 .guild-Report-A-User-popup-main{
   position: absolute;
   top: 108px;
+  z-index: 100;
   left: 20%;
   right: 0%;
   bottom: 0%;
@@ -1244,6 +1260,7 @@ a{
   left: 0%;
   right: 0%;
   bottom: 0%;
+  z-index: 100;
   background-color: rgb(90, 89, 89);
   color: rgb(255, 255, 255);
   font-size: 30px;
@@ -1283,6 +1300,7 @@ a{
   left: 10%;
   right: 10%;
   bottom: 2%;
+  z-index: 100;
   background-color: rgba(20, 19, 19, 0.836);
   color: rgb(255, 255, 255);
   font-size: 30px;
@@ -1293,9 +1311,10 @@ a{
 .guild-Elder-Messages-popup-main {
   position: absolute;
   top: 108px;
-  left: 40%;
+  left: 20%;
   right: 0%;
   bottom: 0%;
+  z-index: 100000000001;
   background-color: rgba(1, 77, 77, 0.925);
   color: rgb(255, 255, 255);
   font-size: 30px;
@@ -1538,5 +1557,32 @@ a{
     gap: 7px;
     width: 98%;
     margin-bottom: 50px;
+  }
+  .Messages-alignment-div {
+    color: white;
+    flex: 1; /* Expand to fill the remaining space */
+    display: flex;
+    height: 88%;
+    flex-direction: column;
+    width: 72vw;
+    max-height: 70vh;
+    overflow-y: hidden;
+  }
+  .Guild-form{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border: 2px solid black ;
+    gap: 20px;
+    border-radius: 5%;
+    background-color: rgba(255, 255, 255, 0.363);
+    width: 90vw;
+    height: auto;
+    margin-bottom: 70px;
+  }
+  .guild-reload-icon{
+    position: fixed;
+    left: 21%;
+    top: 212px;
   }
 }
