--- a/src/index.css
+++ b/src/index.css
@@ -356,6 +356,25 @@ a{
   border: rgba(0, 0, 0, 0.185) solid 3px;
   border-bottom: rgba(0, 0, 0, 0.767) solid 6px;
 }
+.TN-fixed-divs{
+  position: fixed;
+  top: 108px;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  display: flex;
+  padding-bottom: 100px;
+  flex-direction: column;
+  align-items: center;
+  gap: 30px;
+  font-size: 30px;
+  overflow-y: auto;
+  background: linear-gradient(to bottom, rgba(90, 25, 25), rgba(90, 25, 25),rgb(105, 30, 30), rgb(121, 36, 36), rgb(141, 47, 47), rgb(139, 56, 56),rgb(170, 72, 72),rgb(197, 99, 99));
+}
+.TN-return-arrow{
+  align-self: baseline;
+  width: 140px;
+}
 .Hompage-daily-input{
   width: 300px;
   height: 30px;
@@ -373,7 +392,7 @@ a{
   margin-top: 10px;
 }
 @media screen and (max-width: 1075px) {
-  .Homepage-contents-divs{
+  .Homepage-contents-divs, .TN-contents-divs{
     width: 700px;
   }
   .Hompage-daily-input{
@@ -381,7 +400,7 @@ a{
   }
 }
 @media screen and (max-width: 968px) {
-  .Homepage-contents-divs{
+  .Homepage-contents-divs, .TN-contents-divs{
     width: 600px;
   }
   .Hompage-daily-input{
@@ -389,7 +408,7 @@ a{
   }
 }
 @media screen and (max-width: 863px) {
-  .Homepage-contents-divs{
+  .Homepage-contents-divs, .TN-contents-divs{
     width: 500px;
   }
   .Hompage-daily-input{
@@ -397,7 +416,7 @@ a{
   }
 }
 @media screen and (max-width: 757px) {
-  .Homepage-contents-divs{
+  .Homepage-contents-divs, .TN-contents-divs{
     width: 400px;
   }
   .Hompage-daily-input{
@@ -405,7 +424,7 @@ a{
   }
 }
 @media screen and (max-width: 653px) {
-  .Homepage-contents-divs{
+  .Homepage-contents-divs, .TN-contents-divs{
     width: 340px;
   }
   .Hompage-daily-input{
@@ -1557,7 +1576,7 @@ a{
     text-align: right; 
     cursor: pointer;
   }
-  .Homepage-contents-divs{
+  .Homepage-contents-divs, .TN-contents-divs{
     background-color: rgb(175, 41, 41);
     font-size: 18px;
     padding: 10px;
